# robotica

./: CMakeLists.txt  dance.cpp  package.xml  read_write.cpp  read_write2.cpp  tracking.cpp
